# infotube

./: Cargo.toml  GEMINI.md  LICENSE  README.md  config.toml  sample.txt
.github/workflows/: ci.yml
src/: api.rs  app.rs  config.rs  event.rs  json.rs  main.rs  server.rs  tui.rs  ui.rs  ws_client.rs
