[package]
name = "infotube"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.29.0"
crossterm = { version = "0.28.1", features = ["event-stream"] }
tokio = { version = "1.42.0", features = ["full"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
url = "2.5"
toml = "0.8.19"
anyhow = "1.0.95"
unicode-width = "0.2.0"
dirs = "6.0.0"
futures = "0.3"
